created nmf from reviews grouped by strain

--- a/notebooks/exploratory/6.0-jcm-eda-lineage.ipynb
+++ b/notebooks/exploratory/6.0-jcm-eda-lineage.ipynb
@@ -564,6 +564,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# melting df\n",
+    "linage_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import igraph\n",
     "from igraph import Graph, EdgeSeq"
    ]
