--- a/notebooks/exploratory/7.0-jcm-nmf-reviews.ipynb
+++ b/notebooks/exploratory/7.0-jcm-nmf-reviews.ipynb
@@ -649,10 +649,277 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Import NMF\n",
+    "from sklearn.decomposition import NMF\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jachiike/opt/anaconda3/lib/python3.8/site-packages/sklearn/decomposition/_nmf.py:312: FutureWarning: The 'init' value, when 'init=None' and n_components is less than n_samples and n_features, will be changed from 'nndsvd' to 'nndsvda' in 1.1 (renaming of 0.26).\n",
+      "  warnings.warn((\"The 'init' value, when 'init=None' and \"\n",
+      "/Users/jachiike/opt/anaconda3/lib/python3.8/site-packages/sklearn/decomposition/_nmf.py:1090: ConvergenceWarning: Maximum number of iterations 200 reached. Increase it to improve convergence.\n",
+      "  warnings.warn(\"Maximum number of iterations %d reached. Increase it to\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "NMF(n_components=6)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create NMF \n",
+    "model = NMF(n_components=6)\n",
+    "\n",
+    "#whats the optimal number of components\n",
+    "\n",
+    "#fit model\n",
+    "model.fit(csr_mat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.1  0.   0.1  0.1  0.1  0.06]\n",
+      " [0.18 0.   0.03 0.04 0.02 0.04]\n",
+      " [0.04 0.   0.13 0.07 0.05 0.05]\n",
+      " ...\n",
+      " [0.13 0.01 0.1  0.06 0.01 0.04]\n",
+      " [0.15 0.   0.06 0.04 0.03 0.06]\n",
+      " [0.07 0.   0.07 0.03 0.02 0.07]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Transform the articles: nmf_features\n",
+    "nmf_features = model.transform(csr_mat)\n",
+    "\n",
+    "# Print the NMF features\n",
+    "print(nmf_features.round(2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import pandas\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Create a pandas DataFrame: df\n",
+    "df = pd.DataFrame(nmf_features, index=slugs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    0.120952\n",
+      "1    0.004027\n",
+      "2    0.080868\n",
+      "3    0.083689\n",
+      "4    0.070982\n",
+      "5    0.069771\n",
+      "Name: wedding-cake, dtype: float64\n",
+      "0    0.124967\n",
+      "1    0.003582\n",
+      "2    0.099950\n",
+      "3    0.073756\n",
+      "4    0.068902\n",
+      "5    0.061197\n",
+      "Name: gsc, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Print the row for 'Anne Hathaway'\n",
+    "print(df.loc['wedding-cake'])\n",
+    "\n",
+    "# Print the row for 'Denzel Washington'\n",
+    "print(df.loc['gsc'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6, 78881)\n",
+      "it        1.975876\n",
+      "but       0.531940\n",
+      "me        0.367059\n",
+      "to        0.364478\n",
+      "like      0.313316\n",
+      "was       0.280387\n",
+      "good      0.264044\n",
+      "high      0.259071\n",
+      "not       0.230241\n",
+      "you       0.224226\n",
+      "really    0.190270\n",
+      "very      0.151563\n",
+      "that      0.151027\n",
+      "so        0.149214\n",
+      "just      0.137832\n",
+      "get       0.131881\n",
+      "nice      0.131875\n",
+      "pretty    0.128111\n",
+      "as        0.124803\n",
+      "feel      0.122090\n",
+      "Name: 3, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Create a DataFrame: components_df\n",
+    "components_df = pd.DataFrame(model.components_, columns=words)\n",
+    "\n",
+    "# Print the shape of the DataFrame\n",
+    "print(components_df.shape)\n",
+    "\n",
+    "# Select row 3: component\n",
+    "component = components_df.iloc[3]\n",
+    "\n",
+    "# Print result of nlargest\n",
+    "print(component.nlargest(20))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this will be fixed once we clean stop words out of the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import normalize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "norm_features = normalize(nmf_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(norm_features, index=slugs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "article = df.loc['wedding-cake']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similarities = df.dot(article)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ic| similarities.nlargest(10): wedding-cake       1.000000\n",
+      "                               pot-of-gold        0.998847\n",
+      "                               game-changer       0.998398\n",
+      "                               obama-kush         0.998186\n",
+      "                               grape-ape          0.997687\n",
+      "                               duct-tape          0.997555\n",
+      "                               jesus-og           0.997410\n",
+      "                               snowcap            0.997262\n",
+      "                               supernova          0.997171\n",
+      "                               chocolate-chunk    0.996784\n",
+      "                               dtype: float64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "wedding-cake       1.000000\n",
+       "pot-of-gold        0.998847\n",
+       "game-changer       0.998398\n",
+       "obama-kush         0.998186\n",
+       "grape-ape          0.997687\n",
+       "duct-tape          0.997555\n",
+       "jesus-og           0.997410\n",
+       "snowcap            0.997262\n",
+       "supernova          0.997171\n",
+       "chocolate-chunk    0.996784\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ic(similarities.nlargest(10))"
+   ]
   },
   {
    "cell_type": "code",
