--- a/notebooks/exploratory/5.1-jcm-cleaning-reviews.ipynb
+++ b/notebooks/exploratory/5.1-jcm-cleaning-reviews.ipynb
@@ -21,10 +21,136 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: spacy in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (3.4.3)\n",
+      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (3.3.0)\n",
+      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.10 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (3.0.10)\n",
+      "Requirement already satisfied: thinc<8.2.0,>=8.1.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (8.1.5)\n",
+      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (1.0.9)\n",
+      "Requirement already satisfied: numpy>=1.15.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (1.22.4)\n",
+      "Requirement already satisfied: typer<0.8.0,>=0.3.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (0.4.2)\n",
+      "Requirement already satisfied: pathy>=0.3.5 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (0.6.2)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (2.28.1)\n",
+      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<1.11.0,>=1.7.4 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (1.10.2)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (3.0.8)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (2.0.7)\n",
+      "Requirement already satisfied: srsly<3.0.0,>=2.4.3 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (2.4.5)\n",
+      "Requirement already satisfied: wasabi<1.1.0,>=0.9.1 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (0.10.1)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (20.9)\n",
+      "Requirement already satisfied: setuptools in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (52.0.0.post20210125)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (4.59.0)\n",
+      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (1.0.3)\n",
+      "Requirement already satisfied: jinja2 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (2.11.3)\n",
+      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy) (2.0.8)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from packaging>=20.0->spacy) (2.4.7)\n",
+      "Requirement already satisfied: smart-open<6.0.0,>=5.2.1 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from pathy>=0.3.5->spacy) (5.2.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.1.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from pydantic!=1.8,!=1.8.1,<1.11.0,>=1.7.4->spacy) (4.4.0)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.13.0->spacy) (2.1.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.13.0->spacy) (2.10)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.13.0->spacy) (1.26.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.13.0->spacy) (2020.12.5)\n",
+      "Requirement already satisfied: blis<0.8.0,>=0.7.8 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from thinc<8.2.0,>=8.1.0->spacy) (0.7.9)\n",
+      "Requirement already satisfied: confection<1.0.0,>=0.0.1 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from thinc<8.2.0,>=8.1.0->spacy) (0.0.3)\n",
+      "Requirement already satisfied: click<9.0.0,>=7.1.1 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from typer<0.8.0,>=0.3.0->spacy) (7.1.2)\n",
+      "Requirement already satisfied: MarkupSafe>=0.23 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from jinja2->spacy) (1.1.1)\n",
+      "\u001b[38;5;3m⚠ As of spaCy v3.0, shortcuts like 'en' are deprecated. Please use the\n",
+      "full pipeline package name 'en_core_web_sm' instead.\u001b[0m\n",
+      "Collecting en-core-web-sm==3.4.1\n",
+      "  Using cached https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.1/en_core_web_sm-3.4.1-py3-none-any.whl (12.8 MB)\n",
+      "Requirement already satisfied: spacy<3.5.0,>=3.4.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from en-core-web-sm==3.4.1) (3.4.3)\n",
+      "Requirement already satisfied: typer<0.8.0,>=0.3.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (0.4.2)\n",
+      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (1.0.3)\n",
+      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (1.0.9)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (3.0.8)\n",
+      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (2.0.8)\n",
+      "Requirement already satisfied: srsly<3.0.0,>=2.4.3 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (2.4.5)\n",
+      "Requirement already satisfied: thinc<8.2.0,>=8.1.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (8.1.5)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (2.28.1)\n",
+      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.10 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (3.0.10)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (2.0.7)\n",
+      "Requirement already satisfied: jinja2 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (2.11.3)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (20.9)\n",
+      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (3.3.0)\n",
+      "Requirement already satisfied: numpy>=1.15.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (1.22.4)\n",
+      "Requirement already satisfied: setuptools in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (52.0.0.post20210125)\n",
+      "Requirement already satisfied: wasabi<1.1.0,>=0.9.1 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (0.10.1)\n",
+      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<1.11.0,>=1.7.4 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (1.10.2)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (4.59.0)\n",
+      "Requirement already satisfied: pathy>=0.3.5 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (0.6.2)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from packaging>=20.0->spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (2.4.7)\n",
+      "Requirement already satisfied: smart-open<6.0.0,>=5.2.1 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from pathy>=0.3.5->spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (5.2.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.1.0 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from pydantic!=1.8,!=1.8.1,<1.11.0,>=1.7.4->spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (4.4.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (2.10)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (2.1.1)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (1.26.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (2020.12.5)\n",
+      "Requirement already satisfied: confection<1.0.0,>=0.0.1 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from thinc<8.2.0,>=8.1.0->spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (0.0.3)\n",
+      "Requirement already satisfied: blis<0.8.0,>=0.7.8 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from thinc<8.2.0,>=8.1.0->spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (0.7.9)\n",
+      "Requirement already satisfied: click<9.0.0,>=7.1.1 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from typer<0.8.0,>=0.3.0->spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (7.1.2)\n",
+      "Requirement already satisfied: MarkupSafe>=0.23 in /Users/jachiike/opt/anaconda3/lib/python3.8/site-packages (from jinja2->spacy<3.5.0,>=3.4.0->en-core-web-sm==3.4.1) (1.1.1)\n",
+      "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
+      "You can now load the package via spacy.load('en_core_web_sm')\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install -U spacy\n",
+    "!python -m spacy download en\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "import spacy\n",
+    "sp = spacy.load('en_core_web_sm')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import string\n",
+    "(t for t in doc if t.text not in string.punctuation)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Nick', 'likes', 'play', 'football,', 'fond', 'tennis.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#src https://stackabuse.com/removing-stop-words-from-strings-in-python/#usingthespacylibrary\n",
+    "\n",
+    "all_stopwords = sp.Defaults.stop_words\n",
+    "\n",
+    "text = \"Nick likes to play football, however he is not too fond of tennis.\"\n",
+    "text = \n",
+    "text_tokens = text.split(' ')\n",
+    "tokens_without_sw = [word for word in text_tokens if word not in all_stopwords]\n",
+    "\n",
+    "print(tokens_without_sw)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,7 +169,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -57,12 +183,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "bff1ff42cafc5b6e5f930f880e88a492b77f47fc500aae29da8ae4a2313149b3"
    }
   }
  },
