--- a/notebooks/exploratory/7.0-jcm-nmf-reviews.ipynb
+++ b/notebooks/exploratory/7.0-jcm-nmf-reviews.ipynb
@@ -923,6 +923,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jachiike/opt/anaconda3/lib/python3.8/site-packages/sklearn/decomposition/_nmf.py:312: FutureWarning: The 'init' value, when 'init=None' and n_components is less than n_samples and n_features, will be changed from 'nndsvd' to 'nndsvda' in 1.1 (renaming of 0.26).\n",
+      "  warnings.warn((\"The 'init' value, when 'init=None' and \"\n",
+      "/Users/jachiike/opt/anaconda3/lib/python3.8/site-packages/sklearn/decomposition/_nmf.py:1090: ConvergenceWarning: Maximum number of iterations 200 reached. Increase it to improve convergence.\n",
+      "  warnings.warn(\"Maximum number of iterations %d reached. Increase it to\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Perform the necessary imports\n",
+    "from sklearn.decomposition import NMF\n",
+    "from sklearn.preprocessing import Normalizer, MaxAbsScaler\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "\n",
+    "# Create a MaxAbsScaler: scaler\n",
+    "scaler = MaxAbsScaler()\n",
+    "\n",
+    "# Create an NMF model: nmf\n",
+    "nmf = NMF(n_components=20)\n",
+    "\n",
+    "# Create a Normalizer: normalizer\n",
+    "normalizer = Normalizer()\n",
+    "\n",
+    "# Create a pipeline: pipeline\n",
+    "pipeline = make_pipeline(scaler, nmf, normalizer)\n",
+    "\n",
+    "# Apply fit_transform to artists: norm_features\n",
+    "norm_features = pipeline.fit_transform(csr_mat)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gsc             1.000000\n",
+      "cherry-pie      0.108722\n",
+      "wedding-cake    0.107393\n",
+      "platinum-gsc    0.102103\n",
+      "chemdawg        0.100997\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import pandas\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Create a DataFrame: df\n",
+    "df = pd.DataFrame(norm_features, index=slugs)\n",
+    "\n",
+    "# Select row of 'gsc': artist\n",
+    "artist = df.loc['gsc']\n",
+    "\n",
+    "# Compute cosine similarities: similarities\n",
+    "similarities = df.dot(artist)\n",
+    "\n",
+    "# Display those with highest cosine similarity\n",
+    "print(similarities.nlargest())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
