updating project goals

--- a/notebooks/exploratory/6.0-jcm-eda-lineage.ipynb
+++ b/notebooks/exploratory/6.0-jcm-eda-lineage.ipynb
@@ -544,7 +544,8 @@
    "source": [
     "#TODO read in list of indices into graph, then match slugs to indices\n",
     "#TODO create tuple pairs (parent, child) for directed graph edge additions\n",
-    "# then loop thru list of tuple pairs to create  graph"
+    "# then loop thru list of tuple pairs to create  graph\n",
+    "# https://igraph.readthedocs.io/en/0.10.2/api/igraph.GraphBase.html#add_vertices"
    ]
   },
   {
